--- a/index.html
+++ b/index.html
@@ -2,10 +2,126 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700|Open+Sans:400,700" rel="stylesheet">    <link rel="stylesheet" href="resources/css/reset.css" type="text/css">
     <link rel="stylesheet" href="resources/css/style.css" type="text/css">
     <title>Colmar Academy</title>
   </head>
   <body>
-
+    <header>
+      <div class="logo">
+        <img src="" alt="">
+      </div>
+      <nav>
+        <ul>
+          <li>On Campus</li>
+          <li>Online</li>
+          <li>or Companies</li>
+          <li>Sign In</li>
+        </ul>
+      </nav>
+    </header>
+<!--/*  SECTION*/-->
+    <div class="jumbotron">
+      <img src="" alt="">
+      <h1>Learn something new everyday</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+      <a class="button" href="#">Start here</a>
+    </div>
+<!--/*  SECTION*/-->
+    <div class="">
+      <div class="">
+        <img src="" alt="">
+        <h1>It doesn't hurt to keep practicing</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+        <h3>Emanuel, Sr Strategist at Hiring.com</h3>
+      </div>
+      <div class="">
+        <div class="">
+          <img src="" alt="">
+          <h2>Orientation date</h2>
+          <p>Tue 10/11 &amp; Wed 10/12: 8am-3pm</p>
+          <a href="#">Read more</a>
+        </div>
+        <div class="">
+          <img src="" alt="">
+          <h2>Our Campus</h2>
+          <p>Find which campus is close by you</p>
+          <a href="#">Read more</a>
+        </div>
+        <div class="">
+          <img src="" alt="">
+          <h2>Our guest lecture</h2>
+          <p>Join keynote with Oliver Sack about music in medical treatment</p>
+          <a href="#">Read more</a>
+        </div>
+      </div>
+    </div>
+<!--/*  SECTION*/-->
+    <div class="">
+      <h1>Start Learning</h1>
+      <div class="programs">
+        <img src="" alt="">
+        <h2>Software Engineering</h2>
+        <h3>Courses</h3>
+        <p>Web Development, Mobile Development, iOT, APIs</p>
+      </div>
+      <div class="programs">
+        <img src="" alt="">
+        <h2>Computer art</h2>
+        <h3>Courses</h3>
+        <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+      </div>
+      <div class="programs">
+        <img src="" alt="">
+        <h2>Design</h2>
+        <h3>Courses</h3>
+        <p>Uswr Experience Design, User Research, Visual Design</p>
+      </div>
+      <div class="programs">
+        <img src="" alt="">
+        <h2>Data</h2>
+        <h3>Courses</h3>
+        <p>Data Science, Big Data, SQL, Data Visualization</p>
+      </div>
+      <div class="programs">
+        <img src="" alt="">
+        <h2>Business</h2>
+        <h3>Courses</h3>
+        <p>Product Development, Business Development, Startup</p>
+      </div>
+      <div class="programs">
+        <img src="" alt="">
+        <h2>Marketing</h2>
+        <h3>Courses</h3>
+        <p>Analytics, Content Marketing, Mobile Marketing</p>
+      </div>
+    </div>
+<!--/*  SECTION*/-->
+    <div class="">
+      <h1>Thesis exhibit</h1>
+      <video src="videofile.ogg" autoplay poster="posterimage.jpg">
+        <source src="https://" type="video/">
+      </video>
+      <h2>Reimagine urban</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.Excepteur sint occaecat cupidatat.</p>
+      <div class="thesis">
+        <h2>Fisma:Desing and Prototype</h2>
+        <p>Designer showcase of new prototype product.</p>
+      </div>
+      <div class="thesis">
+        <h2>Now and then</h2>
+        <p>Research study about New York</p>
+      </div>
+    </div>
+<!--/*  SECTION*/-->
+    <footer>
+      <span>&copy; 2016 Colmar Academy All rights reserved</span>
+      <nav>
+        <ul>
+          <li>Terms</li>
+          <li>Privacy</li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
