added first round of images and video

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <body>
     <header>
       <div class="logo">
-        <img src="" alt="">
+        <img src="resources/images/ic-logo.svg" alt="Colmar Academy Lion Logo">
+        <span>COLMAR</span>
+        <span>ACADEMY</span>
       </div>
       <nav>
         <ul>
@@ -22,7 +24,7 @@
     </header>
 <!--/*  SECTION*/-->
     <div class="jumbotron">
-      <img src="" alt="">
+      <img src="resources/images/banner.jpg" alt="girl reading book studying">
       <h1>Learn something new everyday</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
       <a class="button" href="#">Start here</a>
@@ -30,26 +32,26 @@
 <!--/*  SECTION*/-->
     <div class="">
       <div class="">
-        <img src="" alt="">
+        <img src="resources/images/information-main.jpg" alt="man reading book">
         <h1>It doesn't hurt to keep practicing</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
         <h3>Emanuel, Sr Strategist at Hiring.com</h3>
       </div>
       <div class="">
         <div class="">
-          <img src="" alt="">
+          <img src="resources/images/information-orientation.jpg" alt="people walking on brick path">
           <h2>Orientation date</h2>
           <p>Tue 10/11 &amp; Wed 10/12: 8am-3pm</p>
           <a href="#">Read more</a>
         </div>
         <div class="">
-          <img src="" alt="">
+          <img src="resources/images/information-campus.jpg" alt="map on the wall">
           <h2>Our Campus</h2>
           <p>Find which campus is close by you</p>
           <a href="#">Read more</a>
         </div>
         <div class="">
-          <img src="" alt="">
+          <img src="resources/images/information-guest-lecture.jpg" alt="old man dorky glass hipster beard douchey barret">
           <h2>Our guest lecture</h2>
           <p>Join keynote with Oliver Sack about music in medical treatment</p>
           <a href="#">Read more</a>
@@ -60,37 +62,37 @@
     <div class="">
       <h1>Start Learning</h1>
       <div class="programs">
-        <img src="" alt="">
+        <img src="resources/images/course-software.jpg" alt="apple fucks early adopters genuises replace boards slowly">
         <h2>Software Engineering</h2>
         <h3>Courses</h3>
         <p>Web Development, Mobile Development, iOT, APIs</p>
       </div>
       <div class="programs">
-        <img src="" alt="">
+        <img src="resources/images/course-computer-art.jpg" alt="apple iphone 5 works most of the time">
         <h2>Computer art</h2>
         <h3>Courses</h3>
         <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
       </div>
       <div class="programs">
-        <img src="" alt="">
+        <img src="resources/images/course-design.jpg" alt="hipster camera everything old is not cool because you say so">
         <h2>Design</h2>
         <h3>Courses</h3>
         <p>Uswr Experience Design, User Research, Visual Design</p>
       </div>
       <div class="programs">
-        <img src="" alt="">
+        <img src="resources/images/course-data.jpg" alt="open laptop looks like quickbooks">
         <h2>Data</h2>
         <h3>Courses</h3>
         <p>Data Science, Big Data, SQL, Data Visualization</p>
       </div>
       <div class="programs">
-        <img src="" alt="">
+        <img src="resources/images/course-business.jpg" alt="chess board wooden chess pieces">
         <h2>Business</h2>
         <h3>Courses</h3>
         <p>Product Development, Business Development, Startup</p>
       </div>
       <div class="programs">
-        <img src="" alt="">
+        <img src="resources/images/course-marketing.jpg" alt="aplle watch because time apparently is alot of money">
         <h2>Marketing</h2>
         <h3>Courses</h3>
         <p>Analytics, Content Marketing, Mobile Marketing</p>
@@ -99,16 +101,18 @@
 <!--/*  SECTION*/-->
     <div class="">
       <h1>Thesis exhibit</h1>
-      <video src="videofile.ogg" autoplay poster="posterimage.jpg">
-        <source src="https://" type="video/">
+      <video>
+        <source src="resources/videos/thesis.mp4" type="video/mp4">
       </video>
       <h2>Reimagine urban</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.Excepteur sint occaecat cupidatat.</p>
       <div class="thesis">
+        <img src="resources/images/thesis-fisma.jpg" alt="working hard at looking like you're working">
         <h2>Fisma:Desing and Prototype</h2>
         <p>Designer showcase of new prototype product.</p>
       </div>
       <div class="thesis">
+        <img src="resources/images/thesis-now-and-then.jpg" alt="empire state building I loath NY">
         <h2>Now and then</h2>
         <p>Research study about New York</p>
       </div>
