--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700|Open+Sans:400,700" rel="stylesheet">    <link rel="stylesheet" href="resources/css/reset.css" type="text/css">
+    <link rel="shortcut icon" href="resources/images/favicon-32x32.png">
     <link rel="stylesheet" href="resources/css/style.css" type="text/css">
     <title>Colmar Academy</title>
   </head>
@@ -10,14 +11,14 @@
     <header>
       <div class="logo">
         <img src="resources/images/ic-logo.svg" alt="Colmar Academy Lion Logo">
-        <span>COLMAR</span>
+        <span class="bold">COLMAR</span>
         <span>ACADEMY</span>
       </div>
       <nav>
         <ul>
           <li>On Campus</li>
           <li>Online</li>
-          <li>or Companies</li>
+          <li>For Companies</li>
           <li>Sign In</li>
         </ul>
       </nav>
@@ -25,98 +26,128 @@
 <!--/*  SECTION*/-->
     <div class="jumbotron">
       <img src="resources/images/banner.jpg" alt="girl reading book studying">
-      <h1>Learn something new everyday</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-      <a class="button" href="#">Start here</a>
+      <div>
+        <h1>Learn something new everyday</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+        <a class="button" href="#">Start here</a>
+      </div>
     </div>
-<!--/*  SECTION*/-->
-    <div class="">
-      <div class="">
+<!--/*  EVENTS SECTION*/-->
+    <div class="events">
+      <div class="left">
         <img src="resources/images/information-main.jpg" alt="man reading book">
-        <h1>It doesn't hurt to keep practicing</h1>
+        <h2>It doesn't hurt to keep practicing</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-        <h3>Emanuel, Sr Strategist at Hiring.com</h3>
+        <h4>Emanuel, Sr Strategist at Hiring.com</h4>
       </div>
-      <div class="">
-        <div class="">
-          <img src="resources/images/information-orientation.jpg" alt="people walking on brick path">
-          <h2>Orientation date</h2>
-          <p>Tue 10/11 &amp; Wed 10/12: 8am-3pm</p>
-          <a href="#">Read more</a>
+      <div class="right">
+        <div class="event">
+          <img class="event-left" src="resources/images/information-orientation.jpg" alt="people walking on brick path">
+          <div class="event-right">
+            <h3>Orientation date</h3>
+            <p>Tue 10/11 &amp; Wed 10/12: 8am-3pm</p>
+            <a href="#">Read more</a>
+          </div>
         </div>
-        <div class="">
-          <img src="resources/images/information-campus.jpg" alt="map on the wall">
-          <h2>Our Campus</h2>
-          <p>Find which campus is close by you</p>
-          <a href="#">Read more</a>
+        <div class="event">
+          <img class="event-left" src="resources/images/information-campus.jpg" alt="map on the wall">
+          <div class="event-right">
+            <h3>Our Campus</h3>
+            <p>Find which campus is close by you</p>
+            <a href="#">Read more</a>
+          </div>
         </div>
-        <div class="">
-          <img src="resources/images/information-guest-lecture.jpg" alt="old man dorky glass hipster beard douchey barret">
-          <h2>Our guest lecture</h2>
-          <p>Join keynote with Oliver Sack about music in medical treatment</p>
-          <a href="#">Read more</a>
+        <div class="event gray">
+          <img class="event-left" src="resources/images/information-guest-lecture.jpg" alt="old man dorky glasses hipster beard douchey barret">
+          <div class="event-right">
+            <h3>Our guest lecture</h3>
+            <p>Join keynote with Oliver Sack about music in medical treatment</p>
+            <a href="#">Read more</a>
+          </div>
         </div>
       </div>
     </div>
-<!--/*  SECTION*/-->
-    <div class="">
-      <h1>Start Learning</h1>
+<!--/*  COURSES SECTION*/-->
+    <div class="courses">
+      <h2>Start Learning</h2>
       <div class="programs">
-        <img src="resources/images/course-software.jpg" alt="apple fucks early adopters genuises replace boards slowly">
-        <h2>Software Engineering</h2>
-        <h3>Courses</h3>
-        <p>Web Development, Mobile Development, iOT, APIs</p>
-      </div>
-      <div class="programs">
-        <img src="resources/images/course-computer-art.jpg" alt="apple iphone 5 works most of the time">
-        <h2>Computer art</h2>
-        <h3>Courses</h3>
-        <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
-      </div>
-      <div class="programs">
-        <img src="resources/images/course-design.jpg" alt="hipster camera everything old is not cool because you say so">
-        <h2>Design</h2>
-        <h3>Courses</h3>
-        <p>Uswr Experience Design, User Research, Visual Design</p>
-      </div>
-      <div class="programs">
-        <img src="resources/images/course-data.jpg" alt="open laptop looks like quickbooks">
-        <h2>Data</h2>
-        <h3>Courses</h3>
-        <p>Data Science, Big Data, SQL, Data Visualization</p>
-      </div>
-      <div class="programs">
-        <img src="resources/images/course-business.jpg" alt="chess board wooden chess pieces">
-        <h2>Business</h2>
-        <h3>Courses</h3>
-        <p>Product Development, Business Development, Startup</p>
-      </div>
-      <div class="programs">
-        <img src="resources/images/course-marketing.jpg" alt="aplle watch because time apparently is alot of money">
-        <h2>Marketing</h2>
-        <h3>Courses</h3>
-        <p>Analytics, Content Marketing, Mobile Marketing</p>
+        <div class="program">
+          <img src="resources/images/course-software.jpg" alt="apple fucks early adopters genuises replace boards slowly">
+          <h3>Software Engineering</h3>
+          <h4>Courses</h4>
+          <p>Web Development, Mobile Development, iOT, APIs</p>
+        </div>
+        <div class="program">
+          <img src="resources/images/course-computer-art.jpg" alt="apple iphone 5 works most of the time">
+          <h3>Computer art</h3>
+          <h4>Courses</h4>
+          <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+        </div>
+        <div class="program">
+          <img src="resources/images/course-design.jpg" alt="hipster camera everything old is not cool because you say so">
+          <h3>Design</h3>
+          <h4>Courses</h4>
+          <p>User Experience Design, User Research, Visual Design</p>
+        </div>
+        <div class="program">
+          <img src="resources/images/course-data.jpg" alt="open laptop looks like quickbooks">
+          <h3>Data</h3>
+          <h4>Courses</h4>
+          <p>Data Science, Big Data, SQL, Data Visualization</p>
+        </div>
+        <div class="program">
+          <img src="resources/images/course-business.jpg" alt="chess board wooden chess pieces">
+          <h3>Business</h3>
+          <h4>Courses</h4>
+          <p>Product Development, Business Development, Startup</p>
+        </div>
+        <div class="program">
+          <img src="resources/images/course-marketing.jpg" alt="aplle watch because time apparently is alot of money">
+          <h3>Marketing</h3>
+          <h4>Courses</h4>
+          <p>Analytics, Content Marketing, Mobile Marketing</p>
+        </div>
       </div>
     </div>
-<!--/*  SECTION*/-->
-    <div class="">
-      <h1>Thesis exhibit</h1>
-      <video>
-        <source src="resources/videos/thesis.mp4" type="video/mp4">
-      </video>
-      <h2>Reimagine urban</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.Excepteur sint occaecat cupidatat.</p>
-      <div class="thesis">
-        <img src="resources/images/thesis-fisma.jpg" alt="working hard at looking like you're working">
-        <h2>Fisma:Desing and Prototype</h2>
-        <p>Designer showcase of new prototype product.</p>
+<!--/*  THESIS SECTION*/-->
+    <div class="title">
+      <h2>Thesis exhibit</h2>
+    </div>
+    <div class="thesis">
+
+      <div class="thesis-left">
+        <video>
+          <source src="resources/videos/thesis.mp4" type="video/mp4">
+        </video>
+        <h2>Reimagine urban</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.Excepteur sint occaecat cupidatat.</p>
       </div>
-      <div class="thesis">
-        <img src="resources/images/thesis-now-and-then.jpg" alt="empire state building I loath NY">
-        <h2>Now and then</h2>
-        <p>Research study about New York</p>
+
+      <div class="thesis-right">
+
+        <div class="paper gray">
+          <div class="paper-left">
+            <img src="resources/images/thesis-fisma.jpg" alt="working hard at looking like you're working">
+          </div>
+          <div class="paper-right">
+            <h3>Fisma:Desing and Prototype</h3>
+            <p>Designer showcase of new prototype product.</p>
+          </div>
+        </div>
+
+        <div class="paper">
+          <div class="paper-left">
+            <img src="resources/images/thesis-now-and-then.jpg" alt="empire state building I loath NY">
+          </div>
+          <div class="paper-right">
+            <h3>Now and then</h3>
+            <p>Research study about New York</p>
+          </div>
+        </div>
+
       </div>
     </div>
+
 <!--/*  SECTION*/-->
     <footer>
       <span>&copy; 2016 Colmar Academy All rights reserved</span>
