--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
         <span class="bold">COLMAR</span>
         <span>ACADEMY</span>
       </div>
-      <nav>
+      <nav class="mobile">
+        <ul>
+          <li><img src="resources/images/ic-logo.svg" alt="Colmar Academy Lion Logo"></li>
+          <li><img src="resources/images/ic-on-campus.svg" alt="On campus"></li>
+          <li><img src="resources/images/ic-online.svg" alt="Colmar Academy Online"></li>
+          <li><img src="resources/images/ic-login.svg" alt="Colmar Academy Login"></li>
+        </ul>
+      </nav>
+      <nav class="desktop">
         <ul>
           <li>On Campus</li>
           <li>Online</li>
@@ -150,7 +158,7 @@
 
 <!--/*  SECTION*/-->
     <footer>
-      <span>&copy; 2016 Colmar Academy All rights reserved</span>
+      <span>&copy; 2016 Colmar Academy. All rights reserved</span>
       <nav>
         <ul>
           <li>Terms</li>
