--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700|Open+Sans:400,700" rel="stylesheet">    <link rel="stylesheet" href="resources/css/reset.css" type="text/css">
     <link rel="shortcut icon" href="resources/images/favicon-32x32.png">
     <link rel="stylesheet" href="resources/css/style.css" type="text/css">
